Correçao Swagger
